# foss4g2026-talk

./: .gitignore  LICENSE  LICENSE-content.md  README.md  package-lock.json  package.json  pyproject.toml  recommended-images.yaml  slides.md
.claude/agents/: slide-reviewer.md
.claude/commands/: slide-reviewer.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: deploy.yaml  zizmor.yml
docs/: script.md
playwright/: argo-clip-rung1.mjs  argo-clip-rung2.mjs  argo-ui.mjs  backfill-rung2-slow.yaml  stac-logbook.mjs
scripts/: _svg_util.py  annotate_clip.py  clip_demo.sh  gen-ladders.py  make_flow_svg.py  make_heatmap_png.py  make_qr.py  make_recap_gif.py  make_screencast_data.py  record_clip.sh  seed_constants.py
tests/: test_make_flow_svg.py  test_make_heatmap_png.py  test_make_screencast_data.py  test_svg_util_contrast.py  test_talk_script.py
theme/: README.md  index.ts  package.json
theme/components/: CurrentUrlQRCode.vue  DecorativeRectangle.vue  EmailIcon.vue  GitHubIcon.vue  LinkedInIcon.vue  Logo.vue  LogoHorDemi.vue  LogoHorNegMono.vue  LogoHorPos.vue  LogoHorPosMono.vue  WebsiteIcon.vue
theme/layouts/: cover.vue  title.vue  two-cols.vue
theme/setup/: main.ts
theme/styles/: index.css
theme/utils/: assets.ts
